Backend Update 28 JUl

--- a/src/Components/Payment_Success/Style.css
+++ b/src/Components/Payment_Success/Style.css
@@ -11,6 +11,7 @@
     box-shadow: rgba(0,0,0,0.090) 0px 0px 15px 0px;
     border-radius: 3px;
     padding: 5px;
+    margin-top: 15px;
 }
 
 .order img{
